# OmniSVG

./: .gitignore  .gitmodules  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  app.py  inference.py  pyproject.toml  requirements.txt
scripts/windows/: with_cairo_runtime.ps1
