[project]
name = "omnisvg"
version = "0.1.0"
description = "OmniSVG inference and Gradio demo"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.11.0,<2",
    "cairosvg==2.7.1",
    "configargparse==1.7.1",
    "einops==0.4.1",
    "gradio==5.37.0",
    "huggingface-hub>=0.31,<1",
    "ipython==8.12.3",
    "moviepy==1.0.3",
    "networkx>=3.4,<4",
    "numpy==2.2.6",
    "pillow==10.1.0",
    "pyyaml==6.0.2",
    "qwen-vl-utils==0.0.11",
    "shapely==2.0.7",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "transformers==4.51.3",
    "typing-inspection==0.4.0",
    "typing-extensions==4.12.2",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
